[tool.poetry]
name = "slash-refunds-tendermint"
version = "0.1.0"
description = ""
authors = ["Dylan Schultz <hello@schultzie.dev>"]
readme = "README.md"
packages = [{include = "slash_refunds_tendermint"}]

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
